# MLOps_Talleres

Taller_2/: README.md  docker-compose.yaml
Taller_2/fastapi/: Dockerfile  main.py  pyproject.toml
Taller_2/jupyterlab/: Dockerfile  pyproject.toml  train.py
Taller_MLFlow/: README.md  docker-compose.yml  mlflow_serv.service
Taller_MLFlow/fastapi/: Dockerfile  app.py  requirements.txt
Taller_MLFlow/jupyterlab/: Dockerfile  requirements.txt
Taller_MLFlow/minio/.minio.sys/: format.json
Taller_MLFlow/minio/.minio.sys/tmp/.trash/0500a26d-c1d8-40a4-90a3-f15be5bb93c4/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/08f9e08f-59ae-49eb-95f0-984e856e797b/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/0cb1df1f-fa38-4d0a-b8aa-5541c75497f8/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/0f088e62-ad88-4b21-b548-511955b3ee32/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/166005a2-06d2-48ef-adc8-1f2063480904/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/16c57dbe-d529-422a-9750-521353de9bdb/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/17c83d98-b37e-4315-a9e1-6aaa21369722/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/1997b562-cecc-43f7-ae04-cfe7bbeb0105/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/1aa5115d-1c6b-40e4-8c08-ff0fc229f13b/: xl.meta.bkp
Taller_MLFlow/minio/.minio.sys/tmp/.trash/1d0d819b-ba5c-4fb0-a0ba-d0733daeedef/: xl.meta.bkp
Taller_MLFlow/mysql-init/: init.sql
Taller_MLFlow/notebooks/: Notebook Entrenamiento.ipynb
(+85 files in other folders)
