[project]
name = "jupyterlab-env"
version = "0.1.0"
description = "Entorno para entrenar modelos de pingüinos"
requires-python = ">=3.10"

dependencies = [
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "fastapi",
  "uvicorn",
  "joblib",
  "jupyter",
  "jupyterlab",
  "numpy",
]

[tool.uv]
